# lunio

./: .gitignore  Cargo.toml  README.md
apps/gui/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/gui/src/: App.css  App.tsx  index.css  main.tsx
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/src/: client.rs  commands.rs  lib.rs  main.rs  system.rs
apps/gui/src/constants/: ExplorerItem.ts  ImageMeta.ts  masonryMock.ts  mock.ts
apps/gui/src/contexts/: AppContext.tsx  ModalOverlay.tsx  TabContext.tsx
apps/gui/src/hooks/: useEntries.tsx  useThumbnail.tsx
apps/gui/src/lib/: adapt.ts  bytes.ts  (+5 more)
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  models.rs
crates/core/src/engine/: mod.rs  runtime.rs
crates/core/src/fs/: id.rs  metadata.rs  mod.rs  scan.rs  watcher.rs
crates/core/src/index/: index.rs
crates/core/src/thumbnails/: cache.rs  generator.rs  mod.rs  worker.rs
crates/core/src/thumbnails/formats/: images.rs  mod.rs  pdf.rs  video.rs
crates/core/tests/: test_basic.rs  test_list.rs  test_thumbnail.rs
crates/daemon/: Cargo.toml
crates/daemon/assets/: manifest.json
crates/daemon/src/: api.rs  daemon.rs  dispatcher.rs  event.rs  framing.rs  ipc.rs  main.rs  protocol.rs  registry.rs  router.rs  server.rs  transport.rs
crates/daemon/src/bootstrap/: bootstrapper.rs  downloader.rs  extractor.rs  manifest.rs  mod.rs  verifier.rs
crates/daemon/src/bridge/: jobs.rs  mod.rs  thumbs.rs
crates/daemon/src/commands/: get_thumbnail.rs  list_dir.rs  mod.rs  open_file.rs  request_thumbnail.rs  scan.rs  search.rs  shutdown.rs
crates/daemon/src/server/: handler.rs  mod.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/fs/: conflict.rs  error.rs  mod.rs  ops.rs
crates/engine/src/index/: event.rs  ingest.rs  mod.rs  model.rs  persist.rs  query.rs  service.rs  store.rs  tokenize.rs
crates/engine/src/jobs/: cancel.rs  event.rs  job.rs  mod.rs  persist.rs  progress.rs  queue.rs  scheduler.rs  service.rs  state.rs  store.rs  worker.rs
crates/engine/src/thumbs/: cache.rs  evict.rs  extractor.rs  mod.rs  model.rs  persist.rs  scheduler.rs  service.rs  worker.rs
crates/engine/src/watch/: backend.rs  event.rs  mod.rs  service.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: capabilties.rs  codec.rs  command.rs  envelope.rs  error.rs  event.rs  lib.rs  response.rs  topic.rs
(+33 files in other folders)
