[package]
name = "lunio_core"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
ahash = "0.8.12"
dashmap = "6.1.0"
file-id = "0.2.3"
image = "0.25.9"
notify = "8.2.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
walkdir = "2.5.0"
