[package]
name = "lunio_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dirs = "6.0.0"
flate2 = "1.1.5"
lunio_protocol = { version = "0.1.0", path = "../protocol" }
lunio_engine = { version = "0.1.0", path = "../engine" }
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
xz2 = "0.1.7"
zip = "6.0.0"
